# physics_prediction

./: .gitignore  flake8  pyproject.toml
data/: new_data.py  utils.py
models/: interaction_config.py  interaction_loss.py  interaction_model.py  interaction_utils.py  model_building_blocks.py  physics_postprocess.py
scripts/: cmd_parser.py  generate_grouping.py  param_setter.py  test.py  train.py  utils2.py
scripts/test_classes/: base_test.py  qual_test.py  quan_test.py
visualize/: utils.py
