[tool.poetry]
name = "physics_prediction"
version = "0.1.0"
description = ""
authors = ["mocobt <mocobt@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.2"
tensorflow = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
